Combat Cook: Pork Sword & Corn Dog
Created two edible sword items that can be crafted from raw porkchop and cooked porkchop.
Both are edible and do average damage.
The Pork Sword can also be cooked into the Corn Dog.

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs = -Xmx1G
 org.gradle.parallel = true
 
 # Mod Properties
-version = 1.0.0
-maven_group = de.pandro.QuiltTestMod
-archives_base_name = Quilt-Test-Mod
+version = 0.0.1
+maven_group = de.pandro.modding.minecraft
+archives_base_name = Combat-Cook
 
 # Dependencies are managed at gradle/libs.versions.toml
